--- a/notebooks/calc_RPC.ipynb
+++ b/notebooks/calc_RPC.ipynb
@@ -59,11 +59,10 @@
     "obs = obs.where(obs[\"time.year\"]<1972, drop=True)\n",
     "obs = obs.sortby(\"lon\")\n",
     "\n",
-    "# Fine-grain the observations to match the model outputs\n",
+    "# Interpolate the observations to match the model outputs\n",
     "with warnings.catch_warnings(action=\"ignore\"):\n",
     "    obs[\"time\"] = obs.indexes[\"time\"].to_datetimeindex()\n",
     "obs = obs.interp_like(f, kwargs={\"fill_value\":\"extrapolate\"})\n",
-    "# f = f.interp_like(obs, kwargs={\"fill_value\":\"extrapolate\"})\n",
     "\n",
     "# Linearly detrend the data\n",
     "obs_lin_trend = xr.polyval(obs[\"time\"], obs.psl.polyfit(dim='time', deg=1).polyfit_coefficients)\n",
